# algo-viz-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.md
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
src/libsort/: bubble_sort.rs  heap_sort.rs  insertion_sort.rs  mod.rs  selection_sort.rs  sort_element.rs  sorter.rs
src/sorting/: bubble_sort.rs  heap_sort.rs  mod.rs  sort_element.rs  sorter.rs
