[package]
name = "algo-viz-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "sorting"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
ggez = "0.9.0-rc0"
rand = "0.8.5"
rodio = "0.17.1"
